tests/NormalTests/paczka1/small_fuzzy/88420838.err
Error in line 3: y4VAFH8sE A457 14,2
Error in line 4: y4VAFH8sE S620 10,1
Error in line 7: y4VAFH8sE A102 1,7
Error in line 12: vX9XO S620 34,1
